--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,41 @@
-<h1> Hello World! </h1>
+  <div class="jumbotron">
+    <h1 class="title">GOOD</h1>
+    <p class="slogan">Good Job 是一个提供工作机会的求职网站。
+    <br>
+    我们希望藉由这个网站，能让大家找到且应征上高薪且优质的工作。
+    <br>
+     凭借自己的努力和天份也会变 Winner。
+    </p>
+    <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
+  </div>
+
+  <section id="company">
+  <div class = "container-fluid">
+    <div class="row">
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="https://ww2.sinaimg.cn/large/006tKfTcgy1fdlnk2nu9pj303k03kq2p.jpg" alt="search" class = "img-thumbnail">
+          <div class="caption">
+            <h3>北京朝阳建外SOHO</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="https://ww1.sinaimg.cn/large/006tKfTcgy1fdlnq096c0j303k03ka9y.jpg" alt="bid" class = "img-thumbnail">
+          <div class="caption">
+            <h3>info@18koffer.com</h3>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 ">
+        <div class="thumbnail">
+          <img src="https://ww3.sinaimg.cn/large/006tKfTcgy1fdlnut1nayj303k03k746.jpg" alt="heart" class = "img-thumbnail">
+          <div class="caption">
+            <h3>010-12344321</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
